# LeadAgent

./: DESIGN_DOCUMENT.md  Dockerfile  Lead_Agent_API.postman_collection.json  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_api_server.py
examples/: demo.py  parallel_workflow.yaml  simple_demo.py  simple_workflow.yaml
src/lead_agent/: __init__.py  config_loader.py  lead_agent.py  models.py
src/lead_agent/agents/: __init__.py  ai_agent.py  base.py  http_api.py  mcp_server.py
src/lead_agent/api/: __init__.py  models.py  routes.py  server.py
src/lead_agent/patterns/: __init__.py  circuit_breaker.py  observer.py  retry.py
src/lead_agent/workflow/: __init__.py  engine.py  executor.py  state_machine.py
tests/: __init__.py  test_agents.py  test_config_loader.py  test_integration.py  test_models.py  test_patterns.py  test_workflow.py
